--- a/manifest/rev-manifest.json
+++ b/manifest/rev-manifest.json
@@ -1,5 +1,7 @@
 {
-  "css/index.css": "css/index.79ab471a03.cache.css",
-  "css/page.css": "css/page.49a7bc0afe.cache.css",
-  "js/index.js": "js/index.70707e10eb.cache.js"
+  "css/index.css": "css/index.a67c928fbd.cache.css",
+  "css/reset.css": "css/reset.f3bcd8dd2e.cache.css",
+  "index.html": "index.8d939871a0.cache.html",
+  "js/index.js": "js/index.cbc6072dfb.cache.js",
+  "lib/js/jquery.min.js": "lib/js/jquery.41175d1d95.cache.min.js"
 }
