--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gulp-rev": "^8.1.1",
     "gulp-rev-format": "^1.0.4",
     "gulp-rev-replace": "^0.4.3",
+    "gulp-sass": "^3.1.0",
     "gulp-sequence": "^1.0.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.0",
