--- a/manifest/rev-manifest.json
+++ b/manifest/rev-manifest.json
@@ -1,7 +1,7 @@
 {
-  "css/index.css": "css/index.a67c928fbd.cache.css",
-  "css/reset.css": "css/reset.f3bcd8dd2e.cache.css",
-  "index.html": "index.8d939871a0.cache.html",
-  "js/index.js": "js/index.cbc6072dfb.cache.js",
+  "css/index.css": "css/index.7473127d3f.cache.css",
+  "img/play.png": "img/play.3aa1e1d645.cache.png",
+  "index.html": "index.e377c88a42.cache.html",
+  "js/index.js": "js/index.dcc4cfd7ed.cache.js",
   "lib/js/jquery.min.js": "lib/js/jquery.41175d1d95.cache.min.js"
 }
